--- a/front-web/package.json
+++ b/front-web/package.json
@@ -47,6 +47,7 @@
     ]
   },
   "devDependencies": {
-    "@types/leaflet": "^1.5.19"
+    "@types/leaflet": "^1.5.19",
+    "@types/react-select": "^3.1.2"
   }
 }
